[package]
name = "rust_lib_convex_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
tokio = { version = "1", features = ["full"] }
android_logger = { version = "0.14.1" }
log = { version = "0.4.21" }
convex = { version = "0.9", default-features = false, features = ["rustls-tls-webpki-roots"] }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
tokio-stream = { features = [ "io-util", "sync" ], version = "0.1" }
once_cell = { version = "1.19.0" }
futures = { version = "0.3" }
parking_lot = { version = "0.12.3" }
async-once-cell = { version = "0.5.3" }
serde_json = { version = "1.0.120" }
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
maplit = { version = "1" }